fixed admin name not centered in navbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,11 @@ code {
   align-items: center;
 }
 
+#userName
+{
+  margin: 0;
+}
+
 a
 {
     text-decoration: none;
